--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
+org.gradle.configuration-cache=true
